# nanoTitan

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  main.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
benchmarks/: bench.cpp  bench_combine.py  bench_moe.py  bench_pack_tokens.py  mem_copy_benchmark.py
configs/: big_sabaka.toml  ddp_reference.toml  default.toml  dist.toml  miniddp.toml  naive_pp.toml  single_gpu-76M.toml  single_gpu.toml  sweep_hparams.toml
csrc/: bindings.cpp  random.cpp
csrc/kernels/: backward_combine_kernel.cu  backward_pack_kernel.cu  bwd_grouped_gemm_dW.cu  bwd_grouped_gemm_dX.cu  bwd_grouped_gemm_up_proj_dW.cu  bwd_grouped_gemm_up_proj_dX.cu  combine_kernels.cu  copy_kernel.cu  count_experts.cu  gemm.cu  grouped_gemm.cu  pack_tokens.cu
csrc/runtime/: cuda_check.h  cuda_event.h  cuda_stream.cpp  cuda_stream.h  device_buffer.h  tensor_view.h
runs/single_gpu_8M_batch_size=8_seq_len=1024_steps=1000-20260422-021931/: events.out.tfevents.1776813571.Israel.8956.0
scripts/: profile_pack_tokens_ncu.py  sweep.py
src/: config.py  dist_env.py  metrics.py  model.py  model_utils.py  ops.py  optim.py  parallel_dims.py  pipeline_model.py  profiler.py  train.py  utils.py
src/data/: dataset.py  prepare_dataset.py  tokenizer.py
src/model/: cuda_backend.py  cuda_extension.py  feed_fwd.py  model.py  moe_layer.py  moe_ops.py  torch_backend.py  utils.py
src/parallel/: __init__.py  dp.py  pp.py  reducer.py
src/runtime/: __init__.py  base.py  ddp.py  ddp_reference.py  dp.py  naive_pp.py  pp.py  pp_gpipe.py  reducer.py  single.py
tests/: test_combine.py  test_combine_bwd.py  test_config.py  test_gemm.py  test_grouped_gemm.py  test_moe_layer.py  test_moe_ops_bwd.py  test_pack_bwd.py  test_pack_tokens_correctness.py  test_packing.py  test_sweep.py
tests/cpp/: test_cuda_stream.cpp
tests/distributed/: test_torch_ep_a2a.py
