[project]
name = "nanotitan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.2",
    "jaxtyping>=0.3.9",
    "numpy>=2.4.3",
    "pydantic>=2.11.0",
    "tiktoken>=0.12.0",
    "torch>=2.6.0,<2.7.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.0",
]

[tool.uv]
index-url = "https://pypi.org/simple"
extra-index-url = ["https://download.pytorch.org/whl/cu124"]

# [tool.uv.sources]
# torch = { index = "https://download.pytorch.org/whl/cu124" }

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]
ignore = ["F722", "F821", "E501"]

