[project]
name = "nanotitan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "einops>=0.8.2",
    "jaxtyping>=0.3.9",
    "numpy==1.26.4",
    "pydantic>=2.11.0",
    "pytest>=9.0.3",
    "tensorboard>=2.20.0",
    "tiktoken>=0.12.0",
    "torch==2.6.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]
ignore = ["F722", "F821", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["random_ext"]

