[project]
name = "nanotitan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "datasets>=5.0.0",
    "einops>=0.8.2",
    "jaxtyping>=0.3.9",
    "numpy==1.26.4",
    "nvitop>=1.7.1",
    "pydantic>=2.11.0",
    "pytest>=9.0.3",
    "tensorboard>=2.20.0",
    "tiktoken>=0.12.0",
]

[dependency-groups]
dev = [
    "ninja",
    "setuptools",
    "wheel",
    "pre-commit>=4.2.0",
    "ruff>=0.12.0",
]

[project.optional-dependencies]
cpu = [
    "torch==2.6.0",
]

cu124 = [
    "torch==2.6.0",
]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu124" },
    ],
]
no-build-isolation-package = ["nanotitan"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu124", extra = "cu124" },
]


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]
ignore = ["F722", "F821", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["nanotitan_cuda"]

[tool.pytest.ini_options]
markers = [
    "cuda: requires CUDA and the compiled CUDA extension",
]
addopts = "--strict-markers"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
